Fixed comment not showing bug in ticket details

--- a/users/static/css/style.css
+++ b/users/static/css/style.css
@@ -87,6 +87,10 @@ h2 {
     margin-bottom: none;
 }
 
+/* .ri-profile-line {
+    font-size: 3rem;
+} */
+
 
 /*=============== NAV BAR ===============*/
 nav {
@@ -384,6 +388,11 @@ button {
     color: var(--title-color);
 }
 
+.card-subtitle a,
+.quick-card-icon a {
+    font-size: 3.25rem;
+}
+
 .quick-card:hover {
     cursor: pointer;
     box-shadow: 0 10px 18px 0 rgba(0,0,0,0.2);
@@ -396,7 +405,7 @@ button {
 .quick-card-icon a:hover,
 .card-subtitle a:hover {
     text-decoration: none;
-    font-size: 3rem;
+    opacity: 65%;
 }
 
 
